# shallow_water_simulation

./: .gitignore  CMakeLists.txt  README.md  Readme.txt
include/: Pool.h  ShaderProgram.h  Skybox.h  Sphere.h  WaterComputeShaderProgram.h  camera.h  common.h
shaders/: box.fs  calculatingHeights.comp  common.glsl  dropShader.comp  normals.fs  pool.fs  pool.tese  pool.vs
src/: Pool.cpp  ShaderProgram.cpp  Skybox.cpp  Sphere.cpp  WaterShaderProgram.cpp  common.cpp  main.cpp
